@@ -5,6 +5,7 @@ import it.unimi.dsi.fastutil.ints.IntList;
 import net.lyivx.ls_furniture.common.config.Configs;
 import net.lyivx.ls_furniture.common.network.NetworkRecipeSync;
 import net.lyivx.ls_furniture.registry.ModItems;
+import net.mehvahdjukaar.moonlight.api.platform.network.NetworkHelper;
 import net.minecraft.core.RegistryAccess;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.server.level.ServerPlayer;
@@ -12,12 +13,13 @@ import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.item.CreativeModeTab;
 import net.minecraft.world.item.CreativeModeTabs;
 import net.minecraft.world.item.Item;
+import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.level.Level;
 import org.jetbrains.annotations.Nullable;
+import com.mojang.datafixers.util.Pair;
+import net.minecraft.world.item.ItemStack;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
+import java.util.*;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
@@ -28,53 +30,51 @@ public class RecipeSorter {
 
 
     //called from server side by recipe stuff.
-    public static void accept(List<WorkstationRecipe> workstationRecipes) {
-        UNSORTED.clear();
-        workstationRecipes.forEach(r -> UNSORTED.add(r.getResultItem(RegistryAccess.EMPTY).getItem()));
+    public static void accept(List<RecipeHolder<WorkstationRecipe>> sawmillRecipes) {
+        sawmillRecipes.forEach(r -> UNSORTED.add(r.value().getResultItem(RegistryAccess.EMPTY).getItem()));
     }
 
     public static void acceptOrder(IntList list) {
         UNSORTED.clear();
-        ITEM_ORDER.clear();
         list.forEach(i -> ITEM_ORDER.add(BuiltInRegistries.ITEM.byId(i)));
     }
 
-    // don't think we can repopulate off-thread
+    // dont think we can repopulate offthread
     public static void refreshIfNeeded(RegistryAccess reg) {
         if (UNSORTED.isEmpty()) return;
-        ITEM_ORDER.clear();
-
-        CreativeModeTab customTab = ModItems.ITEM_GROUP.get();
-
-
-        if (!customTab.hasAnyItems()) {
-            // this is NOT a client only method. Calling on server thread is valid.
+        if (!CreativeModeTabs.getDefaultTab().hasAnyItems()) {
             CreativeModeTabs.tryRebuildTabContents(FeatureFlags.VANILLA_SET, false, reg);
         }
+        Map<CreativeModeTab, List<Item>> tabContent = new HashMap<>();
 
-        List<Item> customTabItems = ModItems.ITEMS.getEntries().stream()
-                .map(Supplier::get)
-                .collect(Collectors.toList());
-
-        for (Item item : customTabItems) {
-            if (UNSORTED.contains(item)) {
-                ITEM_ORDER.add(item);
-                UNSORTED.remove(item);
+        for (var t : CreativeModeTabs.tabs()) {
+            List<Pair<Item, Integer>> weights = new ArrayList<>();
+            var list = tabContent.computeIfAbsent(t,
+                    creativeModeTabs -> t.getDisplayItems().stream().map(ItemStack::getItem).toList());
+            var iterator = UNSORTED.iterator();
+            while (iterator.hasNext()) {
+                var i = iterator.next();
+                int index = list.indexOf(i);
+                if (index != -1) {
+                    weights.add(Pair.of(i, index));
+                    iterator.remove();
+                }
             }
+            weights.sort(Comparator.comparingInt(Pair::getSecond));
+            ITEM_ORDER.addAll(weights.stream().map(Pair::getFirst).toList());
         }
-
 
         UNSORTED.clear();
     }
 
 
-    public static void sort(List<WorkstationRecipe> recipes, Level level) {
+    public static void sort(List<RecipeHolder<WorkstationRecipe>> recipes, Level level) {
         if (Configs.SORT_RECIPES) {
             //Just runs once if needed. Needs to be the same from server and client
             refreshIfNeeded(level.registryAccess());
 
             recipes.sort(Comparator.comparingInt(value ->
-                    BuiltInRegistries.ITEM.getId(value.getResultItem(RegistryAccess.EMPTY).getItem())));
+                    ITEM_ORDER.indexOf(value.value().getResultItem(RegistryAccess.EMPTY).getItem())));
         }
     }
 
@@ -83,9 +83,9 @@ public class RecipeSorter {
         ITEM_ORDER.forEach(i -> list.add(BuiltInRegistries.ITEM.getId(i)));
         NetworkRecipeSync.SyncRecipeOrder message = new NetworkRecipeSync.SyncRecipeOrder(list);
         if (player != null) {
-            NetworkRecipeSync.CHANNEL.sendToClientPlayer(player, message);
+            NetworkHelper.sendToClientPlayer(player, message);
         } else {
-            NetworkRecipeSync.CHANNEL.sendToAllClientPlayers(message);
+            NetworkHelper.sendToAllClientPlayers(message);
         }
     }
 }
